[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "brownian-motion"
version = "0.1.0"
description = "Fractional Brownian motion, Levy flights, and Ornstein-Uhlenbeck anomalous diffusion simulations."
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "cycler>=0.11",
]

[tool.ruff]
target-version = "py310"
line-length = 100
exclude = ["Brownian Motion; Random Walks.py"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501", "N802", "N803", "N806", "N815", "N816"]
